[SPARK-YARN-CLIENT] Complete README: Java 8 cluster guide, addJava9ModuleOpens, test instructions
- Add addJava9ModuleOpens to SparkYarnConfig reference table
- Add Java 8 clusters section explaining when/how to disable --add-opens
  and the Spark 3.x / Java 8 JRE ByteBuffer incompatibility caveat
- Add Running the tests section with mvn commands and test coverage summary
- Update table of contents with two new sections

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>